// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpressionInput > with expression   return > disabled false > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      placeholder="example: 1 + 1"
      value="  return"
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression   return > disabled true > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      disabled=""
      placeholder="example: 1 + 1"
      value="  return"
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression  > disabled false > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      placeholder="example: 1 + 1"
      value=""
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression  > disabled true > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      disabled=""
      placeholder="example: 1 + 1"
      value=""
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression "abc" > disabled false > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      placeholder="example: 1 + 1"
      value=""abc""
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression "abc" > disabled true > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      disabled=""
      placeholder="example: 1 + 1"
      value=""abc""
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression 123 > disabled false > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      placeholder="example: 1 + 1"
      value="123"
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;

exports[`ExpressionInput > with expression 123 > disabled true > renders 1`] = `
<div>
  <div
    class="css-995cds"
    direction="row"
  >
    <input
      class="css-1rrnh34-bordered-typographic"
      disabled=""
      placeholder="example: 1 + 1"
      value="123"
    />
    <button
      class="css-s6v2zt-typographic-bordered"
    >
      Evaluate!
    </button>
  </div>
</div>
`;
